syntax = "proto3";
package trst.x.compute.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/trstlabs/trst/x/compute/internal/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;


// CodeInfo is data for the uploaded contract WASM code
message CodeInfo {
    bytes code_hash = 1;
    bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string source = 3;
    string builder = 4;

   google.protobuf.Duration duration = 5 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "duration,omitempty"
  ];
  string title = 6;
    string description = 7;
    uint64 instances = 8;
}


// ContractInfo stores a WASM contract instance
message ContractInfo {
    uint64 code_id = 1 [(gogoproto.customname) = "CodeID"];
    bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string contract_id = 4;
    // never show this in query results, just use for sorting
    // (Note: when using json tag "-" amino refused to serialize it...)
    AbsoluteTxPosition created = 5;
      google.protobuf.Timestamp end_time = 6  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    bytes auto_msg = 7;
    bytes callback_sig = 8;
    string ibc_port_id = 9 [ (gogoproto.customname) = "IBCPortID" ];
}


// ContractInfoWithAddress adds the address (key) to the ContractInfo representation
message ContractInfoWithAddress {
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    ContractInfo ContractInfo = 2 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
}

/*
enum ContractCodeHistoryOperationType {
    option (gogoproto.goproto_enum_prefix) = false;
    Undefined = 0;
    Init = 1 [(gogoproto.enumvalue_customname) = "ContractCodeHistoryTypeInit"];
    Migrate = 2 [(gogoproto.enumvalue_customname) = "ContractCodeHistoryTypeMigrate"];
    Genesis = 3 [(gogoproto.enumvalue_customname) = "ContractCodeHistoryTypeGenesis"];
}
*/

/*
message ContractHistory {
    repeated ContractCodeHistoryEntry code_history_entries = 1 [(gogoproto.nullable) = false];
}
*/

/*
// ContractCodeHistoryEntry stores code updates to a contract.
message ContractCodeHistoryEntry {
    ContractCodeHistoryOperationType operation = 1;
    uint64 code_id = 2 [(gogoproto.customname) = "CodeID"];
    AbsoluteTxPosition updated = 3;
    bytes msg = 4 [(gogoproto.casttype) = "encoding/json.RawMessage"];

}
*/

// AbsoluteTxPosition can be used to sort contracts
message AbsoluteTxPosition {
    // BlockHeight is the block the contract was created at
    int64 block_height = 1;
    // TxIndex is a monotonic counter within the block (actual transaction index, or gas consumed)
    uint64 tx_index = 2;
}

// Model is a struct that holds a KV pair
message Model {
    // hex-encode key to read it better (this is often ascii)
    bytes Key = 1 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
    // base64-encode raw value
    bytes Value = 2;
}


// KeyPair is a struct that holds a public KV pair in string format
message KeyPair {
    string Key = 1;
    string Value = 2;
}



// Params defines the params for activeness of contracts on governance proposals.
message Params {
   option (gogoproto.goproto_stringer) = false;
    int64 AutoMsgFundsCommission  = 1;
    int64 AutoMsgConstantFee = 2;
    int64 RecurringAutoMsgConstantFee = 3;
    //  Maximum period for self-executing contract
   google.protobuf.Duration MaxContractDuration = 4 [
        (gogoproto.nullable)    = false,
        (gogoproto.stdduration) = true,
        (gogoproto.jsontag)     = "max_contract_duration,omitempty"
  ];
    //  Minimum period for self-executing contract
   google.protobuf.Duration MinContractDuration = 5 [
        (gogoproto.nullable)    = false,
        (gogoproto.stdduration) = true,
        (gogoproto.jsontag)     = "min_contract_duration,omitempty"
  ];
    google.protobuf.Duration MinContractDurationForIncentive = 6 [
        (gogoproto.nullable)    = false,
        (gogoproto.stdduration) = true,
        (gogoproto.jsontag)     = "min_contract_duration_for_reward,omitempty"
  ];
    int64 MaxContractIncentive = 7;
    int64 MinContractBalanceForIncentive = 8;
}
